# learn

./: .env  .gitignore  202483290198周可名-实验2.docx  202483290198周可名-实验3.docx  78.7z  AGENTS.md  README.md  README.studyos.md  generate_report.py  lab5_freq_domain.m  lab5_实验报告_频域图像增强.docx  modify_doc.py  pyproject.toml  sitecustomize.py  untitled.m  实验05_静态路由实验202483290054.docx  实验06_RIP路由实验202483290054.docx  实验1-数据库表建立-实验报告-填图版.docx  实验1-数据库表建立-实验报告.docx  计组实验5实验报告.docx  计组实验6实验报告.docx
.codex-tmp/: build_report.py  do_restore.py  embed_rom_data.py  exp1_text.txt  exp4_text.txt  exp5_ref.txt  exp5_structure.txt  exp5_text.txt  expand_network_reports.py  export_db.py  fix_section5.py  init_data.sql  q1_q2.sql  q1_q4.sql  restore.sql  run_experiment.py  storage_experiment_pdf_text.txt  storage_experiment_report_template_text.txt  verify.txt  write_report.py  write_report_v2.py
00-inbox/: README.md  ideas.md
01-topics/: README.md
02-journal/: README.md
03-outputs/: 202483290198_周可名_计网实践.docx  jiwang-keshe-report-draft-v2.md  jiwang-keshe-report-outline.md  mips-regfile-lab6-report-draft.md  packet-tracer-campus-network-report-draft.md  tcp-course-design-report.md  实验07_OSPF路由实验_改写版.docx  实验08_BGP路由实验_改写版.docx  实验1_202483290054_李林浩.docx  实验2_202483290054_李林浩.docx  实验5_数据库系统_报告填写稿.docx  实验5_数据库系统_报告填写稿.md  实验5_数据库系统_报告填写稿_全黑.docx  计组实验6实验报告_改写版.docx
03-resources/: README.md
04-prompts/: README.md  create-topic.md  daily-study-session.md  research-direction.md  review-topic.md  solve-problem-with-sources.md  start-mastery-topic.md
05-meta/: ai-collaboration.md  (+5 more)
(+424 files in other folders)
